--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "USEFS_Python" 
-version = "0.2.0" 
+version = "0.2.1" 
 description = "USEFS access framework for Python"
 authors = [{ name = "SRInternet", email = "srinternet@qq.com" }] 
 license = { file = "LICENSE" }
@@ -26,6 +26,10 @@ dev = ["pytest"]
 
 [project.scripts]  # 命令行脚本
 usefs = "USEFS:main"  # usefs -> USEFS/__init__.main
+
+[project.urls]
+homepage = "https://github.com/SRON-org/USEFS_Python"
+repository = "https://github.com/SRON-org/USEFS_Python"
 
 [tool.setuptools.packages.find]  # 自动查找包
 where = ["."]
